--- a/html/index.html
+++ b/html/index.html
@@ -4,53 +4,122 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tienda en Línea</title>
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
     <header>
-      <nav>
-        <ul>
-          <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#productos">Productos</a></li>
-          <li><a href="#contacto">Contacto</a></li>
-          <li>
-            <a href="#carrito">Carrito (<span id="cart-counter">0</span>)</a>
-          </li>
-        </ul>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">Tienda</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#inicio">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#productos">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contacto">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#carrito"
+                >Carrito (<span id="cart-counter">0</span>)</a
+              >
+            </li>
+          </ul>
+        </div>
       </nav>
     </header>
 
-    <main>
+    <main class="container mt-5">
       <!-- Sección de productos -->
       <section id="productos" class="d-flex flex-wrap justify-content-between">
         <!-- Los productos se insertarán aquí -->
       </section>
 
       <!-- Sección de contacto -->
-      <section id="contacto">
+      <section id="contacto" class="mt-5">
         <h2>Contacto</h2>
-        <form action="https://formspree.io/f/{YOUR_FORM_ID}" method="POST">
+        <form
+          action="https://formspree.io/f/{YOUR_FORM_ID}"
+          method="POST"
+          class="needs-validation"
+          novalidate
+        >
           <div class="form-group">
             <label for="name">Nombre:</label>
-            <input type="text" id="name" name="name" required />
+            <input
+              type="text"
+              class="form-control"
+              id="name"
+              name="name"
+              required
+            />
+            <div class="invalid-feedback">Por favor ingresa tu nombre.</div>
           </div>
           <div class="form-group">
             <label for="email">Correo Electrónico:</label>
-            <input type="email" id="email" name="email" required />
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              name="email"
+              required
+            />
+            <div class="invalid-feedback">
+              Por favor ingresa un correo electrónico válido.
+            </div>
           </div>
           <div class="form-group">
             <label for="message">Mensaje:</label>
-            <textarea id="message" name="message" rows="5" required></textarea>
+            <textarea
+              class="form-control"
+              id="message"
+              name="message"
+              rows="5"
+              required
+            ></textarea>
+            <div class="invalid-feedback">Por favor ingresa tu mensaje.</div>
           </div>
           <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
       </section>
+      <section id="carrito" class="mt-5">
+        <h2>Carrito de Compras</h2>
+        <div id="carrito-items">
+          <!-- Los productos añadidos al carrito se mostrarán aquí -->
+        </div>
+        <div><strong>Total:</strong> $<span id="carrito-total">0.00</span></div>
+        <button id="checkout-btn" class="btn btn-success mt-3">
+          Proceder al pago
+        </button>
+      </section>
     </main>
 
-    <footer>
-      <p>&copy; 2024 Tienda en Línea. Todos los derechos reservados.</p>
+    <footer class="mt-5">
+      <p class="text-center">
+        &copy; 2024 Tienda en Línea. Todos los derechos reservados.
+      </p>
     </footer>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="../js/script.js"></script>
   </body>
 </html>
