--- a/html/index.html
+++ b/html/index.html
@@ -3,22 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tienda en Línea</title>
+    <title>Proyecto E-commerce</title>
+    <link rel="stylesheet" href="../css/styles.css" />
     <link
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Tienda</a>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">E-commerce</a>
         <button
           class="navbar-toggler"
           type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
           aria-controls="navbarNav"
           aria-expanded="false"
           aria-label="Toggle navigation"
@@ -26,12 +27,14 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#inicio">Inicio</a>
+              <a class="nav-link active" aria-current="page" href="#productos"
+                >Productos</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#productos">Productos</a>
+              <a class="nav-link" href="#reseñas">Reseñas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contacto">Contacto</a>
@@ -43,83 +46,101 @@
             </li>
           </ul>
         </div>
-      </nav>
-    </header>
+      </div>
+    </nav>
 
-    <main class="container mt-5">
-      <!-- Sección de productos -->
-      <section id="productos" class="d-flex flex-wrap justify-content-between">
-        <!-- Los productos se insertarán aquí -->
-      </section>
+    <!-- Sección de productos -->
+    <section id="productos" class="container my-5">
+      <h2>Productos</h2>
+      <div
+        id="productos-container"
+        class="d-flex flex-wrap justify-content-around"
+      >
+        <!-- Productos serán insertados aquí -->
+      </div>
+    </section>
 
-      <!-- Sección de contacto -->
-      <section id="contacto" class="mt-5">
-        <h2>Contacto</h2>
-        <form
-          action="https://formspree.io/f/{YOUR_FORM_ID}"
-          method="POST"
-          class="needs-validation"
-          novalidate
-        >
-          <div class="form-group">
-            <label for="name">Nombre:</label>
-            <input
-              type="text"
-              class="form-control"
-              id="name"
-              name="name"
-              required
-            />
-            <div class="invalid-feedback">Por favor ingresa tu nombre.</div>
-          </div>
-          <div class="form-group">
-            <label for="email">Correo Electrónico:</label>
-            <input
-              type="email"
-              class="form-control"
-              id="email"
-              name="email"
-              required
-            />
-            <div class="invalid-feedback">
-              Por favor ingresa un correo electrónico válido.
+    <!-- Sección de reseñas -->
+    <section id="reseñas" class="container my-5">
+      <h2>Reseñas</h2>
+      <div class="row">
+        <div class="col-12 col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Cliente 1</h5>
+              <p class="card-text">Reseña del cliente 1...</p>
             </div>
           </div>
-          <div class="form-group">
-            <label for="message">Mensaje:</label>
-            <textarea
-              class="form-control"
-              id="message"
-              name="message"
-              rows="5"
-              required
-            ></textarea>
-            <div class="invalid-feedback">Por favor ingresa tu mensaje.</div>
-          </div>
-          <button type="submit" class="btn btn-primary">Enviar</button>
-        </form>
-      </section>
-      <section id="carrito" class="mt-5">
-        <h2>Carrito de Compras</h2>
-        <div id="carrito-items">
-          <!-- Los productos añadidos al carrito se mostrarán aquí -->
         </div>
-        <div><strong>Total:</strong> $<span id="carrito-total">0.00</span></div>
-        <button id="checkout-btn" class="btn btn-success mt-3">
-          Proceder al pago
-        </button>
-      </section>
-    </main>
+        <div class="col-12 col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Cliente 2</h5>
+              <p class="card-text">Reseña del cliente 2...</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Cliente 3</h5>
+              <p class="card-text">Reseña del cliente 3...</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-    <footer class="mt-5">
-      <p class="text-center">
-        &copy; 2024 Tienda en Línea. Todos los derechos reservados.
-      </p>
-    </footer>
+    <!-- Sección de carrito -->
+    <section id="carrito" class="container my-5">
+      <h2>Carrito de Compras</h2>
+      <div id="carrito-items" class="d-flex flex-column">
+        <!-- Items del carrito serán insertados aquí -->
+      </div>
+      <h3>Total: $<span id="carrito-total">0</span></h3>
+      <button id="vaciar-carrito" class="btn btn-danger">Vaciar Carrito</button>
+    </section>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- Sección de contacto -->
+    <section id="contacto" class="container my-5">
+      <h2>Contacto</h2>
+      <form action="https://formspree.io/f/tu-email" method="POST">
+        <div class="mb-3">
+          <label for="nombre" class="form-label">Nombre</label>
+          <input
+            type="text"
+            class="form-control"
+            id="nombre"
+            name="nombre"
+            required
+          />
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Correo Electrónico</label>
+          <input
+            type="email"
+            class="form-control"
+            id="email"
+            name="email"
+            required
+          />
+        </div>
+        <div class="mb-3">
+          <label for="mensaje" class="form-label">Mensaje</label>
+          <textarea
+            class="form-control"
+            id="mensaje"
+            name="mensaje"
+            rows="3"
+            required
+          ></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+      </form>
+    </section>
+
     <script src="../js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
