Roboto google font

--- a/html/index.html
+++ b/html/index.html
@@ -143,6 +143,44 @@
       </form>
     </section>
 
+    <!-- Footer -->
+    <footer class="bg-light text-center text-lg-start">
+      <div class="container p-4">
+        <div class="row">
+          <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Sobre Nosotros</h5>
+            <p>
+              Somos una tienda en línea dedicada a ofrecer los mejores productos
+              a nuestros clientes. Nuestra misión es proporcionar una
+              experiencia de compra única y satisfactoria.
+            </p>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Enlaces Útiles</h5>
+            <ul class="list-unstyled mb-0">
+              <li><a href="#productos" class="text-dark">Productos</a></li>
+              <li><a href="#reseñas" class="text-dark">Reseñas</a></li>
+              <li><a href="#contacto" class="text-dark">Contacto</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Síguenos</h5>
+            <ul class="list-unstyled mb-0">
+              <li><a href="#" class="text-dark">Facebook</a></li>
+              <li><a href="#" class="text-dark">Instagram</a></li>
+              <li><a href="#" class="text-dark">Twitter</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="text-center p-3 bg-dark text-white">
+        © 2024 E-commerce. Todos los derechos reservados.
+      </div>
+    </footer>
+
     <script src="../js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
