--- a/html/index.html
+++ b/html/index.html
@@ -3,181 +3,160 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyecto E-commerce</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
+    <title>Mi E-commerce</title>
     <link rel="stylesheet" href="../css/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
   </head>
+
   <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">E-commerce</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
+    <header
+      class="d-flex justify-content-between align-items-center p-3 bg-light"
+    >
+      <img src="../img/cart.png" width="100" height="100" alt="Logo" />
+      <nav>
+        <ul class="menu d-flex list-unstyled gap-3">
+          <li class="itemMenu">
+            <a href="#productos" class="text-dark">Productos</a>
+          </li>
+          <li class="itemMenu">
+            <a href="#reseñas" class="text-dark">Reseñas</a>
+          </li>
+          <li class="itemMenu">
+            <a href="#carrito" class="text-dark"
+              >Carrito (<span id="cart-counter">0</span>)</a
+            >
+          </li>
+          <li class="itemMenu">
+            <a href="#redes-sociales" class="text-dark">Redes Sociales</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section class="portada text-center p-5">
+        <h1>Mi web e-commerce</h1>
+        <p>
+          Bienvenido a nuestra tienda en línea. Encuentra los mejores productos
+          al mejor precio.
+        </p>
+      </section>
+
+      <section id="productos" class="contenedorCards container my-5">
+        <h2 class="text-center">Productos</h2>
+        <div
+          id="productos-container"
+          class="d-flex flex-wrap justify-content-around gap-3"
         >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#productos"
-                >Productos</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#reseñas">Reseñas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contacto">Contacto</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#carrito"
-                >Carrito (<span id="cart-counter">0</span>)</a
-              >
-            </li>
-          </ul>
+          <!-- Productos serán insertados aquí -->
         </div>
-      </div>
-    </nav>
+      </section>
 
-    <!-- Sección de productos -->
-    <section id="productos" class="container my-5">
-      <h2>Productos</h2>
-      <div
-        id="productos-container"
-        class="d-flex flex-wrap justify-content-around"
-      >
-        <!-- Productos serán insertados aquí -->
-      </div>
-    </section>
-
-    <!-- Sección de reseñas -->
-    <section id="reseñas" class="container my-5">
-      <h2>Reseñas</h2>
-      <div class="row">
-        <div class="col-12 col-md-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Cliente 1</h5>
-              <p class="card-text">Reseña del cliente 1...</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Cliente 2</h5>
-              <p class="card-text">Reseña del cliente 2...</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-12 col-md-4">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Cliente 3</h5>
-              <p class="card-text">Reseña del cliente 3...</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Sección de carrito -->
-    <section id="carrito" class="container my-5">
-      <h2>Carrito de Compras</h2>
-      <div id="carrito-items" class="d-flex flex-column">
-        <!-- Items del carrito serán insertados aquí -->
-      </div>
-      <h3>Total: $<span id="carrito-total">0</span></h3>
-      <button id="vaciar-carrito" class="btn btn-danger">Vaciar Carrito</button>
-    </section>
-
-    <!-- Sección de contacto -->
-    <section id="contacto" class="container my-5">
-      <h2>Contacto</h2>
-      <form action="https://formspree.io/f/tu-email" method="POST">
-        <div class="mb-3">
-          <label for="nombre" class="form-label">Nombre</label>
-          <input
-            type="text"
-            class="form-control"
-            id="nombre"
-            name="nombre"
-            required
-          />
-        </div>
-        <div class="mb-3">
-          <label for="email" class="form-label">Correo Electrónico</label>
-          <input
-            type="email"
-            class="form-control"
-            id="email"
-            name="email"
-            required
-          />
-        </div>
-        <div class="mb-3">
-          <label for="mensaje" class="form-label">Mensaje</label>
-          <textarea
-            class="form-control"
-            id="mensaje"
-            name="mensaje"
-            rows="3"
-            required
-          ></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
-      </form>
-    </section>
-
-    <!-- Footer -->
-    <footer class="bg-light text-center text-lg-start">
-      <div class="container p-4">
+      <!-- Sección de reseñas -->
+      <section id="reseñas" class="container my-5">
+        <h2 class="text-center">Reseñas</h2>
         <div class="row">
-          <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Sobre Nosotros</h5>
-            <p>
-              Somos una tienda en línea dedicada a ofrecer los mejores productos
-              a nuestros clientes. Nuestra misión es proporcionar una
-              experiencia de compra única y satisfactoria.
-            </p>
+          <div class="col-12 col-md-4">
+            <div class="card">
+              <img
+                src="../img/review1.png"
+                width="150"
+                height="150"
+                class="card-img-top"
+                alt="Cliente 1"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Cliente 1</h5>
+                <p class="card-text">
+                  Me encantó el perfume, el arome es súper suave.
+                  Definitivamente volveré a comprar aquí.
+                </p>
+              </div>
+            </div>
           </div>
-
-          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Enlaces Útiles</h5>
-            <ul class="list-unstyled mb-0">
-              <li><a href="#productos" class="text-dark">Productos</a></li>
-              <li><a href="#reseñas" class="text-dark">Reseñas</a></li>
-              <li><a href="#contacto" class="text-dark">Contacto</a></li>
-            </ul>
+          <div class="col-12 col-md-4">
+            <div class="card">
+              <img
+                src="../img/review2.png"
+                width="150"
+                height="150"
+                class="card-img-top"
+                alt="Cliente 2"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Cliente 2</h5>
+                <p class="card-text">
+                  El pedido llegó rápido y bien empaquetado. Compré unos
+                  perfumes y la calidad es excelente. Muy recomendable.
+                </p>
+              </div>
+            </div>
           </div>
-
-          <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase">Síguenos</h5>
-            <ul class="list-unstyled mb-0">
-              <li><a href="#" class="text-dark">Facebook</a></li>
-              <li><a href="#" class="text-dark">Instagram</a></li>
-              <li><a href="#" class="text-dark">Twitter</a></li>
-            </ul>
+          <div class="col-12 col-md-4">
+            <div class="card">
+              <img
+                src="../img/review3.png"
+                width="150"
+                height="150"
+                class="card-img-top"
+                alt="Cliente 3"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Cliente 3</h5>
+                <p class="card-text">
+                  Increíble atención al cliente. Tuve un problema con la talla y
+                  me lo resolvieron en menos de 24 horas. ¡Así da gusto comprar!
+                </p>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+      </section>
 
-      <div class="text-center p-3 bg-dark text-white">
-        © 2024 E-commerce. Todos los derechos reservados.
+      <section id="carrito" class="contenedorCarrito container my-5">
+        <h2>Carrito</h2>
+        <ul id="carrito-items" class="list-group">
+          <!-- Items del carrito serán insertados aquí -->
+        </ul>
+        <div class="mt-3">
+          <button id="vaciar-carrito" class="btn btn-danger">
+            Vaciar Carrito
+          </button>
+        </div>
+        <div class="total mt-3">
+          <p>Total: <span id="carrito-total">$0</span></p>
+        </div>
+      </section>
+    </main>
+
+    <footer
+      id="redes-sociales"
+      class="bg-light p-4 mt-5 d-flex justify-content-between align-items-center"
+    >
+      <img src="../img/map-bro.png" width="120" height="120" alt="Logo" />
+      <div class="d-flex gap-4">
+        <a href="https://www.facebook.com" target="_blank">
+          <img
+            src="../img/facebook.png"
+            width="60"
+            height="60"
+            alt="Facebook"
+          />
+        </a>
+        <a href="https://www.instagram.com" target="_blank">
+          <img
+            src="../img/instagramt.png"
+            width="60"
+            height="60"
+            alt="Instagram"
+          />
+        </a>
+        <a href="https://www.x.com" target="_blank">
+          <img src="../img/twitteri.png" width="60" height="60" alt="Twitter" />
+        </a>
       </div>
     </footer>
 
