--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <header
       class="d-flex justify-content-between align-items-center p-3 bg-light"
     >
-      <img src="img/cart.png" width="100" height="100" alt="Logo" />
+      <img
+        src="https://dummyimage.com/300x300/cccccc/000000.png"
+        width="100"
+        height="100"
+        alt="Logo"
+      />
       <nav>
         <ul class="menu d-flex list-unstyled gap-3">
           <li class="itemMenu">
@@ -40,8 +45,8 @@
       <section class="portada text-center p-5">
         <h1>Mi web e-commerce</h1>
         <p>
-          Bienvenido a nuestra tienda en línea. Encuentra los mejores productos
-          al mejor precio.
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur
+          ducimus itaque rem!
         </p>
       </section>
 
@@ -62,7 +67,7 @@
           <div class="col-12 col-md-4">
             <div class="card">
               <img
-                src="img/review1.png"
+                src="https://dummyimage.com/150x150/cccccc/000000.png"
                 width="150"
                 height="150"
                 class="card-img-top"
@@ -71,8 +76,9 @@
               <div class="card-body">
                 <h5 class="card-title">Cliente 1</h5>
                 <p class="card-text">
-                  Me encantó el perfume, el arome es súper suave.
-                  Definitivamente volveré a comprar aquí.
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
+                  asperiores nobis voluptatum corporis eos atque accusamus
+                  provident unde.
                 </p>
               </div>
             </div>
@@ -80,7 +86,7 @@
           <div class="col-12 col-md-4">
             <div class="card">
               <img
-                src="img/review2.png"
+                src="https://dummyimage.com/150x150/cccccc/000000.png"
                 width="150"
                 height="150"
                 class="card-img-top"
@@ -89,8 +95,9 @@
               <div class="card-body">
                 <h5 class="card-title">Cliente 2</h5>
                 <p class="card-text">
-                  El pedido llegó rápido y bien empaquetado. Compré unos
-                  perfumes y la calidad es excelente. Muy recomendable.
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel
+                  similique ipsa et laudantium, animi ea eligendi quibusdam quis
+                  dolorum nulla.
                 </p>
               </div>
             </div>
@@ -98,7 +105,7 @@
           <div class="col-12 col-md-4">
             <div class="card">
               <img
-                src="img/review3.png"
+                src="https://dummyimage.com/150x150/cccccc/000000.png"
                 width="150"
                 height="150"
                 class="card-img-top"
@@ -107,8 +114,8 @@
               <div class="card-body">
                 <h5 class="card-title">Cliente 3</h5>
                 <p class="card-text">
-                  Increíble atención al cliente. Tuve un problema con la talla y
-                  me lo resolvieron en menos de 24 horas. ¡Así da gusto comprar!
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+                  ullam illo facilis sint. Ullam omnis dolores inventore?
                 </p>
               </div>
             </div>
@@ -136,21 +143,36 @@
       id="redes-sociales"
       class="bg-light p-4 mt-5 d-flex justify-content-between align-items-center"
     >
-      <img src="img/map-bro.png" width="120" height="120" alt="Logo" />
+      <img
+        src="https://dummyimage.com/120x120/cccccc/000000.png"
+        width="120"
+        height="120"
+        alt="Logo"
+      />
       <div class="d-flex gap-4">
         <a href="https://www.facebook.com" target="_blank">
-          <img src="img/facebook.png" width="60" height="60" alt="Facebook" />
+          <img
+            src="https://dummyimage.com/60x60/cccccc/000000.png"
+            width="60"
+            height="60"
+            alt="Facebook"
+          />
         </a>
         <a href="https://www.instagram.com" target="_blank">
           <img
-            src="img/instagramt.png"
+            src="https://dummyimage.com/60x60/cccccc/000000.png"
             width="60"
             height="60"
             alt="Instagram"
           />
         </a>
         <a href="https://www.x.com" target="_blank">
-          <img src="img/twitteri.png" width="60" height="60" alt="Twitter" />
+          <img
+            src="https://dummyimage.com/600x60/cccccc/000000.png"
+            width="60"
+            height="60"
+            alt="Twitter"
+          />
         </a>
       </div>
     </footer>
