--- a/index.html
+++ b/index.html
@@ -128,9 +128,12 @@
         <ul id="carrito-items" class="list-group">
           <!-- Items del carrito serán insertados aquí -->
         </ul>
-        <div class="mt-3">
+        <div class="cart-actions mt-3">
           <button id="vaciar-carrito" class="btn btn-danger">
             Vaciar Carrito
+          </button>
+          <button id="realizar-compra" class="btn btn-success">
+            Realizar Compra
           </button>
         </div>
         <div class="total mt-3">
@@ -138,6 +141,53 @@
         </div>
       </section>
     </main>
+
+    <!-- Modal de Compra Exitosa -->
+    <div
+      class="modal fade"
+      id="compraExitosaModal"
+      tabindex="-1"
+      aria-labelledby="compraExitosaModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header bg-success text-white">
+            <h5 class="modal-title" id="compraExitosaModalLabel">
+              ¡Compra Realizada!
+            </h5>
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body text-center">
+            <div class="mb-3">
+              <div class="text-success" style="font-size: 4rem">✓</div>
+            </div>
+            <h4>¡Tu compra se realizó exitosamente!</h4>
+            <p class="text-muted">
+              Gracias por tu compra. Recibirás un email de confirmación con los
+              detalles de tu pedido.
+            </p>
+            <p>
+              <strong>Total pagado: $<span id="modal-total">0</span></strong>
+            </p>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-success"
+              data-bs-dismiss="modal"
+            >
+              Continuar Comprando
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <footer
       id="redes-sociales"
