--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <main class="main-content">
       <section class="portada text-center p-5">
-        <h1>Mi web e-commerce</h1>
+        <h1>Tienda en linea</h1>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur
           ducimus itaque rem!
@@ -60,7 +60,7 @@
         </div>
       </section>
 
-      <!-- Sección de reseñas -->
+      <!-- Sección de reseñas
       <section id="reseñas" class="container my-5">
         <h2 class="text-center">Reseñas</h2>
         <div class="row">
@@ -121,7 +121,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section>-->
     </main>
 
     <!-- CARRITO SIDEBAR -->
